[package]
name = "grid-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
grid = {version = "0.14.0", features = ["serde"]}
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.120"
tsify-next = { version = "0.5.3", features = ["json", "wasm-bindgen", "js"], default-features = false }
uuid = { version = "1.10.0", features = ["v4"] }
wasm-bindgen = "0.2.92"
